<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical">

        <com.zego.common.widgets.TitleLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:name="@string/tx_sound_process_title">

        </com.zego.common.widgets.TitleLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="#9b9b9b" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/query_room_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/tx_room_list_is_empty"
                />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/refreshLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/room_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v4.widget.SwipeRefreshLayout>

            <TextView
                android:id="@+id/tx_refresh_hint"
                android:layout_width="match_parent"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/tx_refresh_hint"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:onClick="startPublish"
                android:layout_marginBottom="30dp"
                android:layout_above="@+id/tx_refresh_hint"
                android:layout_centerHorizontal="true"
                android:text="@string/tx_start_publish" />
        </RelativeLayout>
    </LinearLayout>

</layout>
