<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/audition_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/blue_checkbox_selector"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:text="@string/sound_effect_audition"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sound_effect_audition_ear_phone_tip"
            android:textColor="#333333"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:text="@string/tx_stereo_describe"
        android:textColor="#000000"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="left"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tx_double_track_describe"
            android:textColor="@color/red"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            android:id="@+id/angle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:text="@string/tx_angle"
            android:textColor="#333333"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:gravity="right"
            android:paddingTop="70dp"
            android:text="180°" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:gravity="left"
            android:paddingTop="70dp"
            android:text="0°" />

        <com.zego.common.widgets.ArcSeekBar
            android:id="@+id/angle_seek_bar"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:padding="10dp"
            app:arc_border_color="#fff"
            app:arc_border_width="1dp"
            app:arc_max="0"
            app:arc_min="180"
            app:arc_open_angle="170"
            app:arc_progress="90"
            app:arc_rotate_angle="90"
            app:arc_shadow_radius="0dp"
            app:arc_thumb_color="@color/blue"
            app:arc_thumb_mode="FILL"
            app:arc_thumb_radius="14dp"
            app:arc_thumb_shadow_color="#000000"
            app:arc_thumb_width="1dp"
            app:arc_width="10dp" />

    </RelativeLayout>

</LinearLayout>