<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/audition_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/blue_checkbox_selector"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/sound_effect_audition"
                android:textColor="#333333"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/sound_effect_audition_ear_phone_tip"
            android:textColor="#333333"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/tx_voice_changer_describe"
        android:textColor="#000000"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp">

        <RadioGroup
            android:id="@+id/rg_voice"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/no"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:checked="true"
                android:text="无"
                android:textColor="#333333"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/loli"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center|top"
                android:text="萝莉"
                android:textColor="#333333"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/uncle"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:text="大叔"
                android:textColor="#333333"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/custom"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:text="自定义"
                android:textColor="#333333"
                android:textSize="12sp" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tx_custom"
            android:textColor="#333333"
            android:textSize="12sp" />

        <com.zego.common.widgets.CustomMinSeekBar
            android:id="@+id/tones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:currentStr="0.0"
            app:maxStr="8.0"
            app:minStr="-8.0"
            app:title="音调: " />

    </LinearLayout>

</LinearLayout>